# platformio-dependency-updater

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  release.yml
.github/workflows/: end-of-life.yml  labeler.yml  platformio.yml  ruff.yml  uv.yml
src/: Dependabot.py  Models.py  Piobot.py
src/piobot/: Models.py  Piobot.py  __main__.py
src/piobot/providers/: Arduino.py  Bitbucket.py  Espressif.py  GitHub.py  GitLab.py  PlatformIO.py
src/providers/: Arduino.py  Bitbucket.py  GitHub.py  GitLab.py  PlatformIO.py
