[project]
name = "piobot"
version = "1.0.0.a1"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = [
    "gitpython==3.1.51",
    "packaging==26.2",
    "pygithub==2.9.1",
    "requests==2.34.2",
]

[dependency-groups]
dev = ["ruff==0.15.21", "uv==0.11.28"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
