[project]
name = "piobot"
version = "1.0.0b2"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = [
    "gitpython==3.1.55",
    "packaging==26.2",
    "pygithub==2.9.1",
    "requests==2.34.2",
]

[dependency-groups]
dev = ["ruff==0.15.22", "uv==0.11.30"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
